--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
 #welcome-section{
     height: 100vh;
+
 }
 
 @media (max-width:600px){
 
+}
+#navbar {
+   object-position: top;
+   background-position-y: top;
+   position: fixed;
+   top: 0%;
 }
